@@ -14,8 +14,10 @@ script.on_event(defines.events.on_tick, function (event)
     World.on_tick(global.world, event) 
 end)
 
+script.on_init(function (event) World.verify() end)
+
 script.on_configuration_changed(
-    function (event) World.on_configuration_changed(event) end
+    function (event) World.verify() World.on_configuration_changed(event) end
 )
 script.on_event(defines.events.on_player_joined_game, 
     function (event) World.on_player_entered(global.world, event) end
